[package]
name = "karrot-permalink"
description = "Permalink URL parser for Karrot's web contents"
repository = "https://github.com/daangn/permalink"
version = "0.3.0"
license = "MIT"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
percent-encoding = "2.2"
regex = "1"
thiserror = "1.0"
unicode-normalization = "0.1.22"
url = "2.3"
